--- a/DuAn_LMB_NhanSu/DuAn_LMB_NhanSu.csproj
+++ b/DuAn_LMB_NhanSu/DuAn_LMB_NhanSu.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dataprovider.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +60,18 @@
     </Compile>
     <Compile Include="QuanLy.Designer.cs">
       <DependentUpon>QuanLy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="US_Control\CT_ChiNhanh.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="US_Control\CT_ChiNhanh.Designer.cs">
+      <DependentUpon>CT_ChiNhanh.cs</DependentUpon>
+    </Compile>
+    <Compile Include="US_Control\CT_PhongBan.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="US_Control\CT_PhongBan.Designer.cs">
+      <DependentUpon>CT_PhongBan.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -75,6 +88,12 @@
     </Compile>
     <EmbeddedResource Include="QuanLy.resx">
       <DependentUpon>QuanLy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="US_Control\CT_ChiNhanh.resx">
+      <DependentUpon>CT_ChiNhanh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="US_Control\CT_PhongBan.resx">
+      <DependentUpon>CT_PhongBan.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
